fix crop category image on mobile

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -542,6 +542,12 @@ a.carousel-control.right:hover {
   .project-image-container {
       height: 200px;
   }
+  .project-image-container img {
+      margin-top:-20%;
+  }
+  .project-image-container img.mobo {
+      margin-top:0px;
+  }
   .category-col {
     height: 266px;
   }
